[package]
name = "dmx"
version = "0.1.0"
authors = ["David Young <david@thedavidyoung.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["transmitter", "receiver", "serial", "embedded"]

# Enable receive/transmit functionality
receiver = []
transmitter = []

# Use `serialport-rs` abstractions over posix and window serial ports
serial = ["serialport"]

# Use `embedded-hal` uart traits
embedded = ["embedded-hal"]

[dependencies]

serialport = { version = "3.3", optional = true }

[dependencies.embedded-hal]
version = "0.2"
features = ["unproven"]
optional = true